Bug 419450 - Custom pattern size warning not getting cleared
Summary: Custom pattern size warning not getting cleared
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 4.2.9
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-31 12:32 UTC by w4rh4wk.kdebugs
Modified: 2020-04-02 13:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description w4rh4wk.kdebugs 2020-03-31 12:32:25 UTC
When defining a custom pattern, a warning is printed if the used layer / image is too large. This warning does not disappear after the layer / image is scaled back down (and update is clicked).

STEPS TO REPRODUCE
1. Start Krita
2. Create a new 512x512 image (white background)
3. Click 'update' in custom pattern window with 'entire image' selected
4. Observe *no* warning
5. Resize image to 1024x1024
6. Click 'update' in custom pattern window with 'entire image' selected
7. Observe warning
5. Resize image to 512x512
6. Click 'update' in custom pattern window with 'entire image' selected
7. Observe warning *remains*

Additionally:
8. Create new 512x512 image (white background)
9. Click 'update' in custom pattern window with 'entire image' selected
10. Observe warning still *remains*
Comment 1 Halla Rempt 2020-03-31 12:37:28 UTC
Hi,

Thanks for the report. I can confirm the issue.
Comment 2 Halla Rempt 2020-03-31 13:12:18 UTC
Git commit abd172a8680a03b09341d1ebf2eb5dce545354ee by Boudewijn Rempt.
Committed on 31/03/2020 at 13:11.
Pushed by rempt into branch 'master'.

Custom patterns: hide the pattern size warning

M  +7    -1    libs/ui/forms/wdgcustompattern.ui
M  +4    -8    libs/ui/kis_custom_pattern.cc

https://invent.kde.org/kde/krita/commit/abd172a8680a03b09341d1ebf2eb5dce545354ee
Comment 3 Halla Rempt 2020-03-31 13:16:35 UTC
Git commit fcc601803cfac82510c374e1e402ee7afcb0918c by Boudewijn Rempt.
Committed on 31/03/2020 at 13:16.
Pushed by rempt into branch 'master'.

Re-add the actual scaling of the pattern...

M  +10   -2    libs/ui/kis_custom_pattern.cc

https://invent.kde.org/kde/krita/commit/fcc601803cfac82510c374e1e402ee7afcb0918c
Comment 4 Halla Rempt 2020-04-02 13:34:32 UTC
Git commit c7d10fdf5b6427679a65b6d0b1f6b064e2600554 by Boudewijn Rempt.
Committed on 02/04/2020 at 13:09.
Pushed by rempt into branch 'krita/4.3'.

Custom patterns: hide the pattern size warning
(cherry picked from commit abd172a8680a03b09341d1ebf2eb5dce545354ee)

M  +7    -1    libs/ui/forms/wdgcustompattern.ui
M  +2    -0    libs/ui/kis_custom_pattern.cc

https://invent.kde.org/kde/krita/commit/c7d10fdf5b6427679a65b6d0b1f6b064e2600554
Comment 5 Halla Rempt 2020-04-02 13:34:32 UTC
Git commit cde725b9c2982df1b53c2ae43454a72fd4405313 by Boudewijn Rempt.
Committed on 02/04/2020 at 13:09.
Pushed by rempt into branch 'krita/4.3'.

Re-add the actual scaling of the pattern...
(cherry picked from commit fcc601803cfac82510c374e1e402ee7afcb0918c)

M  +5    -3    libs/ui/kis_custom_pattern.cc

https://invent.kde.org/kde/krita/commit/cde725b9c2982df1b53c2ae43454a72fd4405313