Custom patterns: hide the pattern size warning

BUG:419450